--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,10 @@
 /* *****************************************
 * Generics
 * *****************************************/
-
+ul {
+    list-style: none;
+    padding: 0;
+}
 
 
 
