--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 /* *****************************************
 * Generics
 * *****************************************/
+body {
+    background: url('../img/train.jpg') center;
+}
+
 ul {
     list-style: none;
     padding: 0;
@@ -19,7 +23,13 @@ ul {
 ? ELEMENTS
 * ***********************************************************************************/
 
-
+/* *****************************************
+* Wrapper
+* *****************************************/
+.wrapper {
+    background-color: rgba(255, 255, 255, 0.95);
+    border-radius: 10px;
+}
 
 
 
